Fix contrast problem

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html, body {
 
 html {
   font-size: 10px;
-  background-color: #dde;
+  background-color: #d8d8d8;
 }
 
 body {
@@ -52,7 +52,7 @@ p, li, table {
 /* || header layout */
 
 div[class="nav"], article, footer, .secondary {
-  background-color: green;
+  background-color: #fafafa;
 }
 
 article, footer, .secondary {
